force-app/main/default/objects/CCRM_Log_Interaction_Comment__mdt/CCRM_Log_Interaction_Comment__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata is used to fetch the Comment type and Comment in LogInteraction LWC.</description>
    <label>CCRM Log Interaction Comment</label>
    <pluralLabel>CCRM Log Interaction Comments</pluralLabel>
</CustomObject>