force-app/main/default/objects/CCRM_Log_Interaction_Comment__mdt/fields/Active_Flag__c.field-meta.xml
<CustomField>
    <fullName>Active_Flag__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>This is used to represent whether Comment Type is active or not.</description>
    <label>Active Flag</label>
    <type>Checkbox</type>
</CustomField>