force-app/main/default/objects/CCRM_Log_Interaction_Comment__mdt/fields/Comment_Type__c.field-meta.xml
<CustomField>
    <fullName>Comment_Type__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>value of Comment.</description>
    <label>Comment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>