force-app/main/default/objects/CCRM_Log_Interaction_Comment__mdt/fields/Default_Text__c.field-meta.xml
<CustomField>
    <fullName>Default_Text__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Display default text based on the selection of Comment value.</description>
    <label>Default Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>